set min-height for rail to avoid footer jump during search

--- a/css/main.scss
+++ b/css/main.scss
@@ -101,6 +101,7 @@ table:not(.content__table){
 .rail {
     flex: 0 0 185px;
     margin-right: $content-gutter;
+    min-height: 500px;
 }
 
 .rail__content {
